GNOME Bugzilla – Bug 662463
gnome-system-monitor crashes when nicotine+ is running
Last modified: 2012-01-08 22:26:25 UTC
1) Have nicotine+ running in the background. 2) Launch the system monitor either from the CLI or the panel. 3) gnome-system-monitor's window flashes and it crashes. -- $ gdb gnome-system-monitor GNU gdb (Ubuntu/Linaro 7.3-0ubuntu2) 7.3-2011.08 This GDB was configured as "x86_64-linux-gnu". Reading symbols from /usr/bin/gnome-system-monitor...(no debugging symbols found)...done. (gdb) run Starting program: /usr/bin/gnome-system-monitor [Thread debugging using libthread_db enabled] [New Thread 0x7fffeb457700 (LWP 4532)] [New Thread 0x7fffeac56700 (LWP 4533)] [New Thread 0x7fffe933b700 (LWP 4534)] ** (gnome-system-monitor:4529): WARNING **: SELinux was found but is not enabled. ** (gnome-system-monitor:4529): WARNING **: Failed to load icon for nicotine(4048) : Error opening file: No such file or directory ** (gnome-system-monitor:4529): WARNING **: Failed to load icon for nicotine(4048) : Error opening file: No such file or directory terminate called after throwing an instance of 'Gio::Error' Program received signal SIGABRT, Aborted. 0x00007ffff3c5e3a5 in __GI_raise (sig=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64 64 ../nptl/sysdeps/unix/sysv/linux/raise.c: No such file or directory. in ../nptl/sysdeps/unix/sysv/linux/raise.c (gdb) backtrace
+ Trace 228892
-- Ubuntu 11.10 nicotine+ 1.2.16+dfsg-1 gnome-system-monitor 3.2.0-0ubuntu1
Thanks for taking the time to report this bug. What is nicotine+? Did you report this to Ubuntu's bugtracker? Also, unfortunately, that stack trace is missing some elements that will help a lot to solve the problem, so it will be hard for the developers to fix that crash. Can you get us a stack trace with debugging symbols? Please see http://live.gnome.org/GettingTraces for more information on how to do so and attach it to this bug report. Thanks in advance!
Nicotine+ is a p2p client for the soulseek network : http://nicotine-plus.sourceforge.net/ I didn't report to Ubuntu, should I ? Here's the complete trace:
+ Trace 228896
The full trace:
+ Trace 228897
Created attachment 204531 [details] [review] Proposed patch The proposed patch adds an additional catch in the iconthemewrapper's load icon to avoid crash if we can't load the icon because of file not found or other gio errors.
Created attachment 204534 [details] [review] Proposed patch v2 Fixed patch by fixing debug message parameter list to match the template string.
Looks fine. Do you have access to push that Robert? If so, please do.
No, I don't have commit access, so please push it.
Ok, I'll push. Please apply for GNOME git access. I can vouch for you.
Fix can be found in commit 0d394b2d9df72d9ad67deafebf9174b38b42a6d9.