Avoid crash if icon is not found by catching exception.

https://bugzilla.gnome.org/show_bug.cgi?id=662463