src/iconthemewrapper.cpp
@@ -1,6 +1,7 @@
 #include <config.h>
 
 #include <gtkmm/icontheme.h>
+#include <giomm/error.h>
 
 #include "iconthemewrapper.h"
 
@@ -17,6 +18,11 @@ procman::IconThemeWrapper::load_icon(const Glib::ustring& icon_name,
     {
         if (error.code() != Gtk::IconThemeError::ICON_THEME_NOT_FOUND)
             g_error("Cannot load icon '%s' from theme: %s", icon_name.c_str(), error.what().c_str());
+        return Glib::RefPtr<Gdk::Pixbuf>();
+    }
+    catch (Gio::Error &error)
+    {
+        g_debug("Could not load icon '%s' : %s", icon_name.c_str(), error.what().c_str());
         return Glib::RefPtr<Gdk::Pixbuf>();
     }
 }
